--- a/springboot-crud-rest-app/src/main/resources/static/css/index.css
+++ b/springboot-crud-rest-app/src/main/resources/static/css/index.css
@@ -116,7 +116,7 @@ html,body{
 width:100% !important;
 height:100% !important;
 overflow: hidden;
-font-family: Arial !important;
+font-family: Calibri !important;
 font-size:12px;
 background-color: #f3f3f3;
 }
