--- a/springboot-crud-rest-app/src/main/resources/static/css/index.css
+++ b/springboot-crud-rest-app/src/main/resources/static/css/index.css
@@ -126,25 +126,30 @@ background-color: #f3f3f3;
 
 
 #wrapper {
-    padding-left: 70px;
+    /* padding-left: 70px; */
+    padding-left: 0px;
     transition: all .4s ease 0s;
     height: 100%
 }
 
 #sidebar-wrapperMain {
-    margin-left: -150px;
-    left: 50px;
-    width: 150px;
-    background: #222;
+    margin-left: -190px;
+    /* left: 50px;
+    width: 160px; */
+    width: 14%;
+    /* background: #222; */
+    background: #fff;
     position: fixed;
     height: 100%;
     z-index: 10000;
     transition: all .4s ease 0s;
+    border-right: solid 1px #c5d6de;
 }
 .sidebar-nav {
     display: block;
     float: left;
-    width: 150px;
+    /* width: 150px; */
+    width: 100%;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -156,7 +161,8 @@ background-color: #f3f3f3;
     height: auto;
 }
 #wrapper.active {
-    padding-left: 150px;
+   /*  padding-left: 150px; */
+    padding-left: 100px;
 }
 #wrapper.active #sidebar-wrapperMain {
     left: 150px;
@@ -171,10 +177,15 @@ background-color: #f3f3f3;
     display: block;
     float: left;
     text-decoration: none;
-    width: 150px;
+    width: 100%;
+    padding-left: 20%;
+    /*width: 150px;
     background: #252525;
     border-top: 1px solid #373737;
-    border-bottom: 1px solid #1A1A1A;
+    border-bottom: 1px solid #1A1A1A; */
+    background: #fff;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff; 
     -webkit-transition: background .5s;
     -moz-transition: background .5s;
     -o-transition: background .5s;
@@ -189,7 +200,7 @@ background-color: #f3f3f3;
 
 .sidebar-nav li {
   line-height: 40px;
-  text-indent: 20px;
+  /* text-indent: 20px; */
 }
 
 .sidebar-nav li a {
@@ -200,7 +211,7 @@ background-color: #f3f3f3;
 
 .sidebar-nav li a:hover {
   color: #fff;
-  background: rgba(255,255,255,0.2);
+  background: #ddd;
   text-decoration: none;
 }
 
@@ -221,7 +232,7 @@ background-color: #f3f3f3;
 
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
-  background: none;
+  background: #ddd;
 }
 
 #main_icon
@@ -229,6 +240,10 @@ background-color: #f3f3f3;
     float:right;
    padding-right: 35px;
    padding-top:20px;
+}
+.subicon{
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .sub_icon
 {
