--- a/springboot-crud-rest-app/src/main/resources/static/css/Login.css
+++ b/springboot-crud-rest-app/src/main/resources/static/css/Login.css
@@ -6,14 +6,25 @@ background-image: url(/img/truckmin.jpg), url(/img/truckmin.jpg);
 background-repeat: no-repeat;
 background-size: 100% 100%;
 }
-
+html,body,input,label,span,div{
+	 font-family: Calibri !important;
+}
 .imageDiv{
 width: 70%;
 height: 100%;
 float:left;
 /*border: 1px solid ;*/
 }
-
+.imgDiv{
+width: 100%;
+border: 0px solid;
+height: 50%;
+}
+.truck{
+width: 50%;
+height: 82%;
+margin-left: 26%;
+}
 .loginDiv{
 width: 30%;
 height: 100%;
@@ -27,10 +38,11 @@ margin: 30% auto;
 /* border: 1px solid; */
 box-shadow: rgba(0, 0, 0, 0.32) 3px 3px 13px -2px;
 border-radius: 6px;
-background-image: linear-gradient(to right top, #7d969c, #9fa6ad, #9c9491, #7596a2, #cea88e);
+background: white;
+/* background-image: linear-gradient(to right top, #7d969c, #9fa6ad, #9c9491, #7596a2, #cea88e); */
 }
 .login input[type=text], input[type=password] {
-width: 200px !important;
+width: 100% !important;
 color: #515348;
 }
 .wrapper{
@@ -48,7 +60,7 @@ position: relative;
 border-radius: 0;
 outline: none;
 border: none;
-border-bottom: 1px solid black;
+border-bottom: 1px solid #75758a;
 background-color: transparent !important;
 box-shadow: none;
 }
