--- a/springboot-crud-rest-app/src/main/resources/static/css/index.css
+++ b/springboot-crud-rest-app/src/main/resources/static/css/index.css
@@ -133,10 +133,10 @@ background-color: #f3f3f3;
 }
 
 #sidebar-wrapperMain {
-    margin-left: -190px;
+    margin-left: -218px;
     /* left: 50px;
     width: 160px; */
-    width: 14%;
+    width: 16%;
     /* background: #222; */
     background: #fff;
     position: fixed;
@@ -162,10 +162,11 @@ background-color: #f3f3f3;
 }
 #wrapper.active {
    /*  padding-left: 150px; */
-    padding-left: 100px;
+    padding-left: 130px;
 }
 #wrapper.active #sidebar-wrapperMain {
-    left: 150px;
+    /* left: 150px; */
+    left: 170px;
 }
 
 #page-content-wrapper {
@@ -178,7 +179,7 @@ background-color: #f3f3f3;
     float: left;
     text-decoration: none;
     width: 100%;
-    padding-left: 20%;
+    padding-left: 25%;
     /*width: 150px;
     background: #252525;
     border-top: 1px solid #373737;
@@ -231,7 +232,7 @@ background-color: #f3f3f3;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-  color: #fff;
+  color: black !important;
   background: #ddd;
 }
 
