--- a/springboot-crud-rest-app/src/main/resources/static/css/index.css
+++ b/springboot-crud-rest-app/src/main/resources/static/css/index.css
@@ -141,7 +141,7 @@ background-color: #f3f3f3;
     background: #fff;
     position: fixed;
     height: 100%;
-    z-index: 10000;
+    z-index: 1000;
     transition: all .4s ease 0s;
     border-right: solid 1px #c5d6de;
 }
@@ -161,10 +161,18 @@ background-color: #f3f3f3;
     height: auto;
 }
 #wrapper.active {
-   /*  padding-left: 150px; */
-    padding-left: 130px;
+   /*  padding-left: 130px; */
+    padding-left: 0px;
 }
 #wrapper.active #sidebar-wrapperMain {
+    /* left: 150px; */
+    left: 170px;
+}
+ 
+#sidebar-wrapperMain.active {
+    padding-left: 50px;
+}
+ #sidebar-wrapperMain.active {
     /* left: 150px; */
     left: 170px;
 }
@@ -179,7 +187,7 @@ background-color: #f3f3f3;
     float: left;
     text-decoration: none;
     width: 100%;
-    padding-left: 25%;
+    padding-left: 5%;
     /*width: 150px;
     background: #252525;
     border-top: 1px solid #373737;
@@ -232,6 +240,11 @@ background-color: #f3f3f3;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
+  color: black !important;
+  background: #ddd;
+}
+
+#sidebar_menu > .sidebar-brand a:hover {
   color: black !important;
   background: #ddd;
 }
